# libxmlpl-cpp-runtime

./: .gitignore  Makefile.am  README.md  configure.in
config/m4/: check_config.m4
debian/: README.Debian  changelog  control  copyright  rules
scripts/: Makefile.am  libxmlpl_cpp_runtime-config.in
src/xmlpl/cpp/: Makefile.am
src/xmlpl/cpp/runtime/: BuilderTarget.h  CastingObjs.h  ChildBuilderTarget.h  CuRLDataSource.cpp  CuRLDataSource.h  DataSource.h  Exception.h  Functions.cpp  Functions.h  IStreamDataSource.cpp  IStreamDataSource.h  Iterator.h  LibXML2XMLSource.cpp  LibXML2XMLSource.h  LibXML2XMLStream.cpp  LibXML2XMLStream.h  LibraryInfo.h  Makefile.am  Memory.h  NullValues.h  Reference.h  ReferenceCounter.h  Sequence.h  StreamTarget.cpp  StreamTarget.h  Symbol.h  Target.h  TargetCast.h  TypeClasses.h  TypeID.h  Version.cpp  Version.h  VoidTarget.h  XML2SAXHandler.cpp  XML2SAXHandler.h  XMLEntities.cpp  XMLEntities.h  XMLSerializer.cpp  XMLSerializer.h  XMLStream2SerializerAdapter.cpp  (+5 more)
src/xmlpl/cpp/runtime/dom/: Attribute.h  Comment.h  DOM.h  DOMBuilder.cpp  DOMBuilder.h  DOMFactory.cpp  DOMFactory.h  Document.cpp  Document.h  Element.cpp  Element.h  Makefile.am  Node.cpp  Node.h  NodeStack.h  PI.h  Prefix.cpp  Prefix.h  Proxy.cpp  Proxy.h  ProxyStack.h  QName.h  String.cpp  String.h  Text.h  XMLSource.h  XMLStream.h  sizes.cpp
